Fix scrollbar shwoing in tickets when not needed

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -474,14 +474,17 @@
 }
 
 .dashTickets {
-  position: relative;
-  top: 25%;
-  height: 75%;
+  position: absolute;
+  top: 25vh;
+  width: 30vw;
+  height: 75vh;
 
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   overflow-y: auto;
+
+  gap: 2.25vmin;
 }
 
 .dashTickets button {
@@ -489,9 +492,7 @@
 
   width: calc(100% - 4.5vmin);
   min-height: 8.5vh;
-
   margin-left: 2.25vmin;
-  margin-bottom: 2.25vmin;
 
   display: flex;
   flex-direction: row;
@@ -500,6 +501,7 @@
   overflow: hidden;
 
   background: #F5F5F5;
+  box-sizing: border-box;
   border: 0.2vmin solid #D9D9D9;
   border-radius: 1vmin;
 }
